--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -64,3 +64,7 @@
         background-repeat: no-repeat; 
         background-size: cover; 
 }
+
+.titulo-burger {
+    max-width: 100%;
+}
