--- a/scss/_navbar-footer.scss
+++ b/scss/_navbar-footer.scss
@@ -26,3 +26,7 @@
     text-align: right;
 
 }
+/* 
+.footer-vangogh {
+width: 100 !important;
+} */
